SAA-1275: Upgrade dependencies